--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,9 @@
 }
 
 .favorite-image {
+  float: left;
   width: 20rem;
+  margin-top: 25px;
   margin-left: 15px;
   margin-right: 15px;
   border-radius: 10px;
@@ -64,11 +66,6 @@
   height: 40px;
   margin-left: 90%;
   margin-bottom: 10px;
-  /* margin-right: 10px;
-  margin-bottom: 0;
-  position: absolute;
-  bottom: 10px;
-  right: 10px; */
 }
 .recipe-card {
   margin-top: 20px;
@@ -209,6 +206,7 @@
   width: 100%;
 }
 html{
+  background-image: src('../images/background.jpg');
   background-color: #ededed;
 }
 .loginButton{
@@ -305,24 +303,25 @@ body{
 .about-card{
   background-color: #adc178;
 }
-.ingredientForm{
-  
-}
 .ingredientLabel{
-  font-size: 12px;
+  font-size: 14px;
   
 }
 .quantityAdd{
   width: 40px;
+  height: 25px;
+  margin-right: 7px;
+  margin-left: 7px;
 }
 .ingredientButton{
+  height: 25px;
+  font-size: 10px;
 }
 .ingredientAddDiv{
-  float: left;
-
+  
 }
-
 .ingredientForm{
-  diplay: flex;
-  float:;
+  display: flex;
+  margin: "10px";
+  width: 250px;
 }
