--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   margin-top: 20px;
   margin-right: 20px;
   cursor: pointer;
-  background-color: #6c584c
+  background-color: #457B9D
 }
 .recipe-card-image {
   padding-top: 10px;
@@ -101,16 +101,29 @@
   text-align: center;
 }
 .modal-card{
-  background-color: #dde5b6;
+  background-color: #F1FAEE;
 }
 .modal-header{
-  background-color: #6c584c;
+  background-color: #457B9D;
+  width: 100%;
+  margin-left: .5px;
 }
 .modal-footer{
-  background-color: #6c584c;
+  background-color: #457B9D;
+  width: 100%;
+  margin-left: .5px;
+  height: 100%;
+  margin-bottom: -.5px;
 }
 .modal-body{
-  background-color: #adc178;
+  background-color: #A8DADC;
+  width: 100%;
+  height: 100%;
+  margin-left: .5px;
+  margin-bottom: -.5px;
+  margin-top: -.5px;
+  
+
 }
 #favorite{
   cursor: pointer;
@@ -118,6 +131,7 @@
 #modal-recipe{
  float: left;
  text-align: center;
+ background-color: #457B9D;
 }
 #modal-image{
   float: left;
@@ -131,13 +145,17 @@
 #modal-directions-title{
   font-weight: bolder;
   text-align: center;
+  background-color: #457B9D;
+}
+#modal-directions{
+  background-color: #457B9D;
 }
 #modal-ingredients{
  margin-top: 10px;
 }
 
-.nav-link{
-  color: rgb(124 218 144 / 90%)
+.a.nav-link{
+  color: #457b9d;
 }
 
 .footer {
@@ -146,17 +164,17 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 7%;
-  background-color: #f0ead2;
+  height: 5%;
+  background-color: #457B9D;
 
 }
 #footerLogo{
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: 50px;
 }
 
 #footerCreator{
-  margin-top: 15px;
+  margin-top: 10px;
   text-align: center;
   width: 100%;
 }
@@ -165,15 +183,16 @@
   text-align: center;
 }
 .greeting:nth-child(1){
-  margin-top: 50px;
-  font-size: 100px;
-  line-height: 90px;
+  margin-top: 40px;
+  padding-top: 10px;
+  font-size: 90px;
+  line-height: 80px;
   font-family: copperplate;
   font-weight: bolder;
 }
 .greeting:nth-child(2){
-  font-size: 100px;
-  line-height: 90px;
+  font-size: 90px;
+  line-height: 80px;
   font-family: copperplate;
   font-weight: bolder;
 }
@@ -184,7 +203,7 @@
   font-weight: bold;
 }
 .greeting:nth-child(4){
-  margin-top: 30px;
+  margin-top: 20px;
   font-size: 30px;
   font-family: copperplate;
   font-weight: bold;
@@ -195,23 +214,26 @@
   font-weight: bold;
 }
 .loginGreeting{
-  margin-top: 75px;
+  margin-top: 40px;
   font-size: 20px;
   text-align: center;
   font-family: copperplate;
   font-weight: bold;
 }
 #root{
-  background-color: #ededed;
+  background-image: url("./images/background.jpg");
   width: 100%;
+  height: 100%;
 }
 html{
-  background-image: src('../images/background.jpg');
+  background-image: url("./images/background.jpg");
   background-color: #ededed;
+  height: 0%;
 }
 .loginButton{
   margin: 0 auto;
   display:block;
+  
 }
 #footerImage{
   width: 100px;
@@ -219,10 +241,10 @@ html{
 
 #logoLogin{
   display: block;
-  margin-top: 40px;
+  margin-top: 25px;
   margin-left: auto;
   margin-right: auto;
-  width: 15%;
+  width: 30%;
 }
 .card-column{
   width: 100%;
@@ -233,10 +255,12 @@ html{
   margin-top: 25px;
   display:block;
   width: 100%;
+  background-color: #a8dadc;
 }
 .favIngredientTitle{
   font-weight: bold;
   text-align: center;
+  background-color: ;
 }
 .favRecipeTitle{
   font-weight: bold;
@@ -283,9 +307,11 @@ html{
   
 }
 .about-header{
+  
   text-align: center;
-  font-weight: bold;
-  background-color: #6c584c;
+  background-color: #457B9D;
+  height: 75px;
+  font-size: 30px;
 }
 #david-image{
   margin-top: 8px;
@@ -301,7 +327,7 @@ body{
 }
 
 .about-card{
-  background-color: #adc178;
+  background-color: #F1FAEE;
 }
 .ingredientLabel{
   font-size: 14px;
@@ -324,4 +350,16 @@ body{
   display: flex;
   margin: "10px";
   width: 250px;
+}
+.shoppingListTable{
+  background-color: #A8DADC;
+  border: black solid;
+  width: 500px;
+  margin: auto;
+  margin-top: 50px;
+  text-align: center;
+}
+.itemRemove{
+  background-color: red;
+  color: white;
 }
